S5: Step 07 - Introduction to Java API for XML Binding (JAXB) and Configuring JAXB 2